--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ dist-ssr
 *.sw?
 
 # Environment variables
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -33,6 +32,7 @@ dist-ssr
 # Build outputs
 build/
 coverage/
+dist/
 
 # TypeScript
 *.tsbuildinfo
@@ -42,3 +42,27 @@ coverage/
 .idea/
 *.swp
 *.swo
+
+# Deployment
+*.log
+deployment-logs/
+key.json
+gcp-key.json
+service-account.json
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Cloud Run
+cloudrun-temp/
+gcloud-logs/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# OS
+.DS_Store
+Thumbs.db
