--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "terser": "^5.43.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11"
   }
