--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,10 +56,10 @@ jobs:
     
     - name: Deploy to Cloud Run
       run: |
-        gcloud run deploy frontend-admin \
+        gcloud run deploy front-git \
           --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/frontend-admin:${{ github.sha }} \
           --platform managed \
-          --region us-central1 \
+          --region europe-west1 \
           --allow-unauthenticated \
           --port 8080 \
           --memory 512Mi \
