--- a/cloudrun.yaml
+++ b/cloudrun.yaml
@@ -17,7 +17,7 @@ spec:
       containerConcurrency: 80
       timeoutSeconds: 300
       containers:
-      - image: gcr.io/PROJECT_ID/frontend-admin:latest
+      - image: gcr.io/ascendant-altar-457900-v4/frontend-admin:latest
         ports:
         - name: http1
           containerPort: 8080
@@ -34,6 +34,8 @@ spec:
           value: "false"
         - name: VITE_ENABLE_DEVTOOLS
           value: "false"
+        - name: NODE_ENV
+          value: "production"
         resources:
           limits:
             cpu: 1000m
