--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_BACKEND_HTTPS=https://34.60.233.211/api
 VITE_BACKEND_HTTP=https://34.60.233.211/api
 VITE_SWAGGER_URL=https://34.60.233.211/swagger
 
-# Configuración de desarrollo local
+# Configuración de desarrollo local edy profe
 VITE_DEV_MODE=true
 VITE_ENABLE_DEVTOOLS=true 
 
