deploy run final

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-VITE_API_URL=https://34.60.233.211/api
+VITE_API_URL=https://gestion-academica-ac48.onrender.com/api/
 
 # URLs del Backend para desarrollo  
-VITE_BACKEND_HTTPS=https://34.60.233.211/api
-VITE_BACKEND_HTTP=https://34.60.233.211/api
-VITE_SWAGGER_URL=https://34.60.233.211/swagger
+VITE_BACKEND_HTTPS=https://gestion-academica-ac48.onrender.com/api/
+VITE_BACKEND_HTTP=https://gestion-academica-ac48.onrender.com/api/
+VITE_SWAGGER_URL=https://gestion-academica-ac48.onrender.com/swagger/
 
 # Configuración de desarrollo local edy profe
 VITE_DEV_MODE=true
